--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 
 <body>
+<link rel="stylesheet" href="index.css">
   <h1>Binomial Coefficient: Divide and Conquer and Dynamic Algorithms</h1>
   <label for="nInput">Input 'n'</label>
   <input type="number" name="nInput" id="nInput" max="20" min="1" step="1">
+
   <label for="kInput">Input 'k'</label>
   <input type="number" name="kInput" id="kInput" max="20" min="1" step="1">
   <p><button onclick="divideAndConquerCLICK()">Divide and Conquer!</button> </p>
